test: add jacoco plugin for test coverage monitoring